# opening_multi_apps_gui

./: .gitignore  LICENSE  README.md  SECURITY.md  morning_apps.pyw  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-windows-executable.yml  ci.yml
packaging/: windows_entry.py
src/morning_app_launcher/: __init__.py  app.py  controller.py  errors.py  launcher.py  models.py  operational_logging.py  storage.py
src/morning_app_launcher/gui/: main_window.py  presentation.py
src/morning_app_launcher/resources/: __init__.py
tests/: __init__.py  conftest.py  fakes.py  test_controller.py  test_import_safety.py  test_launcher.py  test_operational_logging.py  test_packaging_and_policy.py  test_presentation.py  test_resources.py  test_storage.py
